ajout de l'onglet commande, probleme de serialisation JSON

--- a/factory-front/src/app/app.component.html
+++ b/factory-front/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid p-2">
 
   <nav class="nav nav-pills">
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/commande">Commandes</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/article">Articles</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/ouvrier">Ouvriers</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/table">Tables</a>
