--- a/factory-front/src/app/commande/commande.component.html
+++ b/factory-front/src/app/commande/commande.component.html
@@ -1,3 +1,65 @@
-<p>
-  commande works!
-</p>
+<div class="col-md-12">
+
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Numéro de commande</th>
+          <th>Article</th>
+          <th>Ouvrier</th>
+          <th>Statut</th>
+          <th>Supprimer</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let commande of commandes">
+          <td>{{commande.commandeNumero}}</td>
+          <td>{{commande.article.articleNumero}}</td>
+          <td>{{commande.ouvrier.ouvrierNom}} {{commande.ouvrier.ouvrierPrenom}}</td>
+          <td>{{commande.statut.statutNom}}</td>
+          <td><button class="btn btn-danger" (click)="deleteCommande(commande)">Supprimer commande</button></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  
+  <div class="pt-4">
+    <p>
+      <button class="btn btn-primary" type="button" (click)="isEditCollapsed = !isEditCollapsed">
+        Ajouter une commande
+      </button>
+    </p>
+    <div *ngIf="isEditCollapsed">
+      <div class="card card-body">
+        <form>
+          <div class="form-group">
+            <label for="lastName">Numéro de commande:</label>
+            <input [(ngModel)]="newCommande.commandeNumero" placeholder="Numero de commande" name="commandNumber" class="form-control" id="commandNumber">
+          </div>
+  
+          <div class="form-group">
+            <label for="article">Article:</label>
+            <select [(ngModel)]="newCommande.article" name="article" class="form-control" id="article">
+              <option *ngFor="let article of articles" [ngValue]="article">{{article.articleNumero}}</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+              <label for="article">Ouvrier:</label>
+              <select [(ngModel)]="newCommande.ouvrier" name="ouvrier" class="form-control" id="ouvrier">
+                <option *ngFor="let ouvrier of ouvriers" [ngValue]="ouvrier">{{ouvrier.ouvrierNom}} {{ouvrier.ouvrierPrenom}}</option>
+              </select>
+          </div>   
+
+          <div class="form-group">
+              <label for="article">Statut:</label>
+              <select [(ngModel)]="newCommande.statut" name="statut" class="form-control" id="statut">
+                <option *ngFor="let statut of statuts" [ngValue]="statut">{{statut.statutNom}}</option>
+              </select>
+          </div>   
+  
+          <button class="btn btn-success" (click)="createCommande()">Créer</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  
