ajout de la barre de navigation responsive

--- a/factory-front/src/app/article/article.component.html
+++ b/factory-front/src/app/article/article.component.html
@@ -10,7 +10,7 @@
       <tbody>
         <tr *ngFor="let article of articles">
           <td>{{article.articleNumero}}</td>
-          <td><button class="btn btn-danger" (click)="deleteArticle(article)">Supprimer article</button></td>
+          <td><button class="btn btn-danger" (click)="deleteArticle(article)">Supprimer</button></td>
         </tr>
       </tbody>
     </table>
