--- a/factory-front/src/app/ouvrier/ouvrier.component.html
+++ b/factory-front/src/app/ouvrier/ouvrier.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+<div class="col-md-12 table-responsive">
 
   <table class="table table-striped">
     <thead>
@@ -14,7 +14,7 @@
         <td>{{ouvrier.ouvrierNom}}</td>
         <td>{{ouvrier.ouvrierPrenom}}</td>
         <td>{{ouvrier.tableUsine.tableNumero}}</td>
-        <td><button class="btn btn-danger" (click)="deleteOuvrier(ouvrier)">Supprimer ouvrier</button></td>
+        <td><button class="btn btn-danger" (click)="deleteOuvrier(ouvrier)">Supprimer</button></td>
       </tr>
     </tbody>
   </table>
