--- a/factory-front/src/app/app.component.html
+++ b/factory-front/src/app/app.component.html
@@ -1,10 +1,26 @@
 <div class="container-fluid p-2">
 
-  <nav class="nav nav-pills">
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/commande">Commandes</a>
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/article">Articles</a>
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/ouvrier">Ouvriers</a>
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/table">Tables</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" routerLink="/commande">MTT</a>
+    <button class="navbar-toggler" type="button" (click)="navbarCollapsed = !navbarCollapsed" [attr.aria-expanded]="!navbarCollapsed" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" [ngbCollapse]="navbarCollapsed" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/commande">Commandes</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/article">Articles</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/ouvrier">Ouvriers</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/table">Tables</a>
+        </li>
+      </ul>
+    </div>
   </nav>
 
   <br />
