--- a/factory-front/src/app/commande/commande.component.html
+++ b/factory-front/src/app/commande/commande.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+<div class="col-md-12 table-responsive">
 
     <table class="table table-striped">
       <thead>
@@ -21,7 +21,7 @@
             </select>
           </td>
           <!-- <td>{{commande.statut.statutNom}}</td> -->
-          <td><button class="btn btn-danger" (click)="deleteCommande(commande)">Supprimer commande</button></td>
+          <td><button class="btn btn-danger" (click)="deleteCommande(commande)">Supprimer</button></td>
         </tr>
       </tbody>
     </table>
