Ajout du filtre sur les commandes

--- a/factory-front/src/app/article/article.component.html
+++ b/factory-front/src/app/article/article.component.html
@@ -16,7 +16,7 @@
     </table>
   </div>
   
-  <div class="pt-4">
+  <div class="pt-4 col-md-12">
     <p>
       <button class="btn btn-primary" type="button" (click)="isEditCollapsed = !isEditCollapsed">
         Ajouter un article
