--- a/factory-front/src/app/table/table.component.html
+++ b/factory-front/src/app/table/table.component.html
@@ -17,7 +17,7 @@
     </table>
   </div>
   
-  <div class="pt-4">
+  <div class="pt-4 col-md-12">
     <p>
       <button class="btn btn-primary" type="button" (click)="isEditCollapsed = !isEditCollapsed">
         Ajouter une table
