--- a/factory-front/src/app/commande/commande.component.html
+++ b/factory-front/src/app/commande/commande.component.html
@@ -30,7 +30,7 @@
           <th>Article</th>
           <th>Ouvrier</th>
           <th>Statut</th>
-          <th>Supprimer</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
@@ -39,12 +39,12 @@
           <td>{{commande.article.articleNumero}}</td>
           <td>{{commande.ouvrier.ouvrierNom}} {{commande.ouvrier.ouvrierPrenom}}</td>
           <td>
-            <select [(ngModel)]="commande.statut.id" (change)="onStatutChange($event, commande)" name="statutCommande" class="form-control" id="statutCommande">
+            <select [(ngModel)]="commande.statut.id" (change)="onStatutChange($event, commande)" name="statutCommande" class="form-control select-width-auto" id="statutCommande">
               <option *ngFor="let statut of statuts" [value]="statut.id">{{statut.statutNom}}</option>
             </select>
           </td>
           <!-- <td>{{commande.statut.statutNom}}</td> -->
-          <td><button class="btn btn-danger" (click)="deleteCommande(commande)">Supprimer</button></td>
+          <td><button class="btn btn-danger btn-sm" (click)="deleteCommande(commande)"><fa name="trash"></fa></button></td>
         </tr>
       </tbody>
     </table>
@@ -58,36 +58,52 @@
     </p>
     <div *ngIf="isEditCollapsed">
       <div class="card card-body">
-        <form>
+        <form [formGroup]="createForm" (ngSubmit)="createCommande()">
           <div class="form-group">
-            <label for="lastName">Numéro de commande:</label>
-            <input [(ngModel)]="newCommande.commandeNumero" placeholder="Numero de commande" name="commandNumber" class="form-control" id="commandNumber">
+            <label for="commandNumber">Numéro de commande:</label>
+            <input [(ngModel)]="newCommande.commandeNumero" placeholder="Numero de commande" name="commandNumber" class="form-control" id="commandNumber"
+            formControlName="commandNumber" [ngClass]="{ 'is-invalid': submitted && f.commandNumber.errors }">
+            <div *ngIf="submitted && f.commandNumber.errors" class="invalid-feedback">
+              <div *ngIf="f.commandNumber.errors.required">Le numéro de commande est requis</div>
+            </div>            
           </div>
   
           <div class="form-group">
             <label for="article">Article:</label>
-            <select [(ngModel)]="newCommande.article" name="article" class="form-control" id="article">
+            <select [(ngModel)]="newCommande.article" name="article" class="form-control" id="article"
+            formControlName="article" [ngClass]="{ 'is-invalid': submitted && f.article.errors }">
               <option disabled [value]="undefined">Choisissez un article</option>
               <option *ngFor="let article of articles" [ngValue]="article">{{article.articleNumero}}</option>
             </select>
+            <div *ngIf="submitted && f.article.errors" class="invalid-feedback">
+              <div *ngIf="f.article.errors.required">L'article est requis</div>
+            </div>            
           </div>
 
           <div class="form-group">
-              <label for="article">Ouvrier:</label>
-              <select [(ngModel)]="newCommande.ouvrier" name="ouvrier" class="form-control" id="ouvrier">
+              <label for="ouvrier">Ouvrier:</label>
+              <select [(ngModel)]="newCommande.ouvrier" name="ouvrier" class="form-control" id="ouvrier"
+              formControlName="ouvrier" [ngClass]="{ 'is-invalid': submitted && f.ouvrier.errors }">
                 <option disabled [value]="undefined">Choisissez un ouvrier</option>
                 <option *ngFor="let ouvrier of ouvriers" [ngValue]="ouvrier">{{ouvrier.ouvrierNom}} {{ouvrier.ouvrierPrenom}}</option>
               </select>
+              <div *ngIf="submitted && f.ouvrier.errors" class="invalid-feedback">
+                <div *ngIf="f.ouvrier.errors.required">L'ouvrier est requis</div>
+              </div>           
           </div>   
 
           <div class="form-group">
-              <label for="article">Statut:</label>
-              <select [(ngModel)]="newCommande.statut.id" name="statut" class="form-control" id="statut">
+              <label for="statut">Statut:</label>
+              <select [(ngModel)]="newCommande.statut.id" name="statut" class="form-control" id="statut"
+              formControlName="statut" [ngClass]="{ 'is-invalid': submitted && f.statut.errors }">
                 <option *ngFor="let statut of statuts" [ngValue]="statut.id">{{statut.statutNom}}</option>
               </select>
+              <div *ngIf="submitted && f.statut.errors" class="invalid-feedback">
+                <div *ngIf="f.statut.errors.required">Le statut de la commande est requis</div>
+              </div>              
           </div>   
   
-          <button class="btn btn-success" (click)="createCommande()">Créer</button>
+          <button class="btn btn-success">Créer</button>
         </form>
       </div>
     </div>
