--- a/factory-front/src/app/app.component.html
+++ b/factory-front/src/app/app.component.html
@@ -20,9 +20,9 @@
           <a class="nav-link" routerLink="/table">Tables</a>
         </li>
       </ul>
-      <span>
+      <!-- <span>
         <button (click)="logout()"><fa name="sign-out"></fa> Déconnexion</button>
-      </span>
+      </span> -->
     </div>
   </nav>
 
