ajout des roles user et admin sur spring sec

--- a/factory-front/src/app/app.component.html
+++ b/factory-front/src/app/app.component.html
@@ -21,6 +21,7 @@
         </li>
       </ul>
       <span>
+        {{currentUser}}
         <a class="text-dark" href="/logout"><fa name="sign-out"></fa> Déconnexion</a>
       </span>
     </div>
