--- a/factory-front/src/app/ouvrier/ouvrier.component.html
+++ b/factory-front/src/app/ouvrier/ouvrier.component.html
@@ -14,7 +14,14 @@
         <td>{{ouvrier.ouvrierNom}}</td>
         <td>{{ouvrier.ouvrierPrenom}}</td>
         <td>{{ouvrier.tableUsine.tableNumero}}</td>
-        <td><button class="btn btn-danger btn-sm" (click)="deleteOuvrier(ouvrier)"><fa name="trash"></fa></button></td>
+        <td>
+            <span>
+                <button class="btn btn-danger btn-sm" (click)="deleteOuvrier(ouvrier)"><fa name="trash"></fa></button>
+            </span>
+            <span class="ml-2">
+                <button class="btn btn-sm btn-primary" (click)="toggleUpdate(ouvrier)"><fa name="pencil"></fa></button>
+            </span>
+        </td>
       </tr>
     </tbody>
   </table>
@@ -22,7 +29,7 @@
 
 <div class="pt-4 col-md-12">
   <p>
-    <button class="btn btn-primary" type="button" (click)="isEditCollapsed = !isEditCollapsed">
+    <button *ngIf="!updateMode" class="btn btn-primary" type="button" (click)="isEditCollapsed = !isEditCollapsed">
       Ajouter un ouvrier
     </button>
   </p>
@@ -49,17 +56,24 @@
 
         <div class="form-group">
           <label for="table">Table:</label>
-          <select [(ngModel)]="newOuvrier.tableUsine" name="table" class="form-control" id="table"
+          <select [(ngModel)]="newOuvrier.tableUsine.id" name="table" class="form-control" id="table"
             formControlName="table" [ngClass]="{ 'is-invalid': submitted && f.table.errors }">
             <option disabled [value]="undefined">Choisissez une table</option>
-            <option *ngFor="let table of tables" [ngValue]="table">{{table.tableNumero}}</option>
+            <option *ngFor="let table of tables" [ngValue]="table.id">{{table.tableNumero}}</option>
           </select>
           <div *ngIf="submitted && f.table.errors" class="invalid-feedback">
             <div *ngIf="f.table.errors.required">La table est requise</div>
           </div>  
         </div>
-
-        <button class="btn btn-success">Créer</button>
+        <button class="btn btn-success">
+            <span *ngIf="!updateMode">Créer</span>
+            <span *ngIf="updateMode">Modifier</span>
+        </button>
+        <span class="ml-2" *ngIf="updateMode" (click)="cancelUpdate()">
+            <button class="btn btn-danger">
+                <fa name="times"></fa> Annuler
+            </button>
+        </span>
       </form>
     </div>
   </div>
