--- a/factory-front/src/app/article/article.component.html
+++ b/factory-front/src/app/article/article.component.html
@@ -8,9 +8,16 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let article of articles">
+        <tr *ngFor="let article of articles | sort : 'articleNumero'">
           <td>{{article.articleNumero}}</td>
-          <td><button class="btn btn-danger btn-sm" (click)="deleteArticle(article)"><fa name="trash"></fa></button></td>
+          <td>
+              <span>
+                  <button class="btn btn-danger btn-sm" (click)="deleteArticle(article)"><fa name="trash"></fa></button>
+              </span>
+              <span class="ml-2">
+                  <button class="btn btn-sm btn-primary" (click)="toggleUpdate(article)"><fa name="pencil"></fa></button>
+              </span>
+          </td>
         </tr>
       </tbody>
     </table>
@@ -18,7 +25,7 @@
   
   <div class="pt-4 col-md-12">
     <p>
-      <button class="btn btn-primary" type="button" (click)="isEditCollapsed = !isEditCollapsed">
+      <button *ngIf="!updateMode" class="btn btn-primary" type="button" (click)="isEditCollapsed = !isEditCollapsed">
         Ajouter un article
       </button>
     </p>
@@ -33,7 +40,15 @@
               <div *ngIf="f.articleNumero.errors.required">Le numéro de l'article est requis</div>
             </div> 
           </div>
-          <button class="btn btn-success">Créer</button>
+          <button class="btn btn-success">
+              <span *ngIf="!updateMode">Créer</span>
+              <span *ngIf="updateMode">Modifier</span>
+          </button>
+          <span class="ml-2" *ngIf="updateMode" (click)="cancelUpdate()">
+              <button class="btn btn-danger">
+                  <fa name="times"></fa> Annuler
+              </button>
+          </span>
         </form>
       </div>
     </div>
